@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -16,28 +16,40 @@
 
 package org.qubership.atp.tdm.service.impl;
 
-import org.qubership.atp.tdm.AbstractTestDataTest;
-import org.qubership.atp.tdm.env.configurator.model.System;
-import org.qubership.atp.tdm.env.configurator.model.*;
-import org.qubership.atp.tdm.model.ProjectInformation;
-import org.qubership.atp.tdm.model.mail.charts.ChartSeries;
-import org.qubership.atp.tdm.model.statistics.*;
-import org.qubership.atp.tdm.model.statistics.available.AvailableDataByColumnStats;
-import org.qubership.atp.tdm.model.statistics.report.StatisticsReportElement;
-import org.qubership.atp.tdm.model.statistics.report.StatisticsReportEnvironment;
-import org.qubership.atp.tdm.model.statistics.report.StatisticsReportObject;
-import org.qubership.atp.tdm.model.statistics.report.UsersStatisticsReportElement;
-import org.qubership.atp.tdm.model.statistics.report.UsersStatisticsReportObject;
-import org.qubership.atp.tdm.model.table.TableColumnValues;
-import org.qubership.atp.tdm.model.table.TestDataTable;
-import org.qubership.atp.tdm.repo.TestAvailableDataMonitoringRepository;
-import org.qubership.atp.tdm.repo.TestDataUsersMonitoringRepository;
-import org.qubership.atp.tdm.utils.DataUtils;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.Date;
+import java.util.List;
+import java.util.Locale;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
+import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import org.apache.commons.lang3.StringUtils;
-
+import org.qubership.atp.tdm.AbstractTestDataTest;
+import org.qubership.atp.tdm.env.configurator.model.Connection;
+import org.qubership.atp.tdm.env.configurator.model.LazyEnvironment;
+import org.qubership.atp.tdm.env.configurator.model.LazyProject;
+import org.qubership.atp.tdm.env.configurator.model.LazySystem;
+import org.qubership.atp.tdm.env.configurator.model.Project;
+import org.qubership.atp.tdm.env.configurator.model.System;
+import org.qubership.atp.tdm.model.ProjectInformation;
+import org.qubership.atp.tdm.model.mail.charts.ChartSeries;
 import org.qubership.atp.tdm.model.statistics.AvailableDataStatisticsConfig;
 import org.qubership.atp.tdm.model.statistics.ConsumedStatistics;
 import org.qubership.atp.tdm.model.statistics.ConsumedStatisticsItem;
@@ -52,25 +64,21 @@ import org.qubership.atp.tdm.model.statistics.TestDataTableUsersMonitoring;
 import org.qubership.atp.tdm.model.statistics.UserGeneralStatisticsItem;
 import org.qubership.atp.tdm.model.statistics.UsersOccupyStatisticRequest;
 import org.qubership.atp.tdm.model.statistics.UsersOccupyStatisticResponse;
+import org.qubership.atp.tdm.model.statistics.available.AvailableDataByColumnStats;
+import org.qubership.atp.tdm.model.statistics.report.StatisticsReportElement;
+import org.qubership.atp.tdm.model.statistics.report.StatisticsReportEnvironment;
+import org.qubership.atp.tdm.model.statistics.report.StatisticsReportObject;
+import org.qubership.atp.tdm.model.statistics.report.UsersStatisticsReportElement;
+import org.qubership.atp.tdm.model.statistics.report.UsersStatisticsReportObject;
+import org.qubership.atp.tdm.model.table.TableColumnValues;
+import org.qubership.atp.tdm.model.table.TestDataTable;
+import org.qubership.atp.tdm.repo.TestAvailableDataMonitoringRepository;
+import org.qubership.atp.tdm.repo.TestDataUsersMonitoringRepository;
 import org.qubership.atp.tdm.utils.AvailableStatisticUtils;
+import org.qubership.atp.tdm.utils.DataUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.test.context.jdbc.Sql;
-
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
-import java.util.*;
-import java.util.stream.Collectors;
-
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
 
 
 @Sql({"/scripts.sql"})
@@ -368,7 +376,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
     }
 
     private String readErFromFile(String path) throws IOException {
-        return new String(Files.readAllBytes(Paths.get(path)));
+        return new String(Files.readAllBytes(Path.of(path)));
     }
 
     @Test
@@ -904,7 +912,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
             statisticsService.saveAvailableStatsConfig(config);
             AvailableDataByColumnStats stats = statisticsService.getAvailableDataInColumn(system2, environmentId);
 
-            Assertions.assertEquals(new Integer(0), stats.getStatistics().get(0).getOptions().get("Empty stat"));
+            Assertions.assertEquals(Integer.valueOf(0), stats.getStatistics().get(0).getOptions().get("Empty stat"));
         } catch (Exception e) {
             throw e;
         } finally {
